<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dentist</string>
    <string name="TollName">口腔健康监测档案</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cyclopedia">百科</string>
    <string name="inquary">问诊</string>
    <string name="file">档案</string>
    <string name="me">我的</string>
    <string name="maintenance">养护百科</string>
    <string name="clinic">诊疗百科</string>
    <string name="weekly">百科周刊</string>
    <string name="recommend">推荐阅读</string>

    <!--  我的模块 -->
    <string name="username">游客</string>
    <string name="setData">资料编辑</string>
    <string name="setphoto">修改头像</string>
    <string name="phoneName">手机号</string>
    <string name="name">昵称</string>
    <string name="phone">138****0134</string>
    <string name="RealName">真实姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="setPersonageData">修改个人资料</string>
    <string name="preserve">保存</string>
    <string name="TheBartenderOutpatient">定保门诊</string>
    <string name="SetTheBartenderOutpatient">更改定保门诊</string>
    <string name="ServiceItem">服务项目</string>
    <string name="onLine">在线预约</string>
    <string name="BuyerNotice">近期活动</string>
    <string name="noHospital">尚无定保门诊,预选定保门诊</string>
    <string name="no">取消</string>
    <string name="camera">相机</string>
    <string name="photo">相册</string>
    <string name="man">男</string>
    <string name="lady">女</string>
    <string name="secrecy">保密</string>
    <string name="setPhone">手机号</string>

    <!--  定保门诊模块 -->
    <string name="opinion">意见反馈</string>
    <string name="regulate">管理定保诊所</string>
    <string name="preselection">预选定保诊所</string>
    <string name="site">定位地址:</string>
    <string name="location">无法获得地址</string>
    <string name="import_location">手动输入定位地址</string>
    <string name="localizer">定位</string>
    <string name="selete_city">城市地区选择</string>
    <string name="hotCity">热门城市</string>
    <string name="select">请选择</string>
    <string name="selectCity">城市/区域</string>
    <string name="concreteness">具体地址</string>
    <string name="Provinces">省市区选择</string>
    <string name="protocol">我已阅读并同意《定保诊所服务三方协议》</string>
    <string name="submit">提交预选申请</string>
    <string name="official">门诊微官网</string>
    <string name="ok_preselection" tools:ignore="TypographyDashes">可以预选1-2家诊所,最终定保诊所以系统匹配为准</string>
    <string name="preconcentration" tools:ignore="TypographyDashes">已预选定保门诊,等待系统审核,预计1-2个工作日</string>

    <!--  Login模块 -->
    <string name="_86">+86</string>
    <string name="getCode">获取验证码</string>
    <string name="setCode">输入验证码</string>
    <string name="hint">未注册的手机号将自动创建账号</string>
    <string name="logon">登录</string>
    <string name="retrievePassword">找回密码</string>
    <string name="setPassWord">密码</string>
    <string name="setAccount">手机号/邮箱</string>
    <string name="login_hostital">登录家有牙医,体验更多功能</string>
    <string name="setcode">获取验证码</string>
    <string name="login_password">密码登录</string>
    <string name="login_nopassword">免密码登录</string>
    <string name="elseLogin">其他登录方式</string>
    <string name="agreement">登录或注册即同意《家有牙医用户协议》、《隐私保密协议》</string>

    <!-- 设置模块 -->
    <string name="install">设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="as_regards">关于</string>
    <string name="check_forUpdates">检查更新</string>
    <string name="setPhoneDetails">修改手机号</string>
    <string name="setCodeData">发送验证码</string>
    <string name="oldPhone">原手机号</string>
    <string name="code">验证码</string>
    <string name="setOldPhoneGetCode">输入原手机号收到的验证码</string>
    <string name="setNewPhoneGetCode">输入新手机号收到的验证码</string>
    <string name="next">下一步</string>
    <string name="ok">确认</string>
    <string name="setNewPhone">请在此输入新手机的号码</string>
    <string name="hint_name">长度不能超过十个字</string>
    <string name="hint_RealName">为保证您正常就医,请填写真实姓名</string>

    <!-- 诊所详情模块 -->
    <string name="hostitalMessage">查看定保门诊信息</string>
    <string name="hostital">天秀口腔</string>
    <string name="Official_Accounts">公众号</string>
    <string name="Official_Accounts_code">vx_xyz</string>
    <string name="copy">复制</string>
    <string name="phoneNumber">电话</string>
    <string name="hostilePhone">010-61204983</string>
    <string name="official_website">官网</string>
    <string name="cure_project">治疗项目</string>
    <string name="baidu">https://www.baidu.com</string>

    <!-- 问诊 -->
    <string name="hello">嗨，我是您的私人医生，您感觉牙齿存在什么问题呢？或者有哪些不适呢？</string>
    <string name="selete">选择您可能出现的牙齿问题</string>
    <string name="symptom_toothache">牙疼</string>
    <string name="symptom_Bad_breath">口腔有异味</string>
    <string name="symptom_bleeding">刷牙出血</string>
    <string name="symptom_nigrities">牙齿颜色发黑</string>
    <string name="describe_symptom">是怎么样的牙疼呢？</string>
    <!-- 牙疼 -->
    <!-- 吃东西时才会疼 -->
    <string name="describe_symptom_eat">吃东西时才会疼</string>
    <string name="describe_symptom_eat_of">吃什么东西会感到牙疼呢？</string>
    <string name="describe_symptom_eat_cold">冷食或甜食</string>
    <string name="describe_symptom_eat_hot">热食</string>
    <string name="if_stopEat">停止食用是否会得到缓解呢？</string>
    <string name="if_stopEat_yes">是</string>
    <string name="if_stopEat_no">否</string>
    <string name="if_cold_water">冷水是否有助于缓解疼痛？</string>
    <string name="degreeOrTime">持续时间和疼痛程度如何？</string>
    <string name="shortTime">短，痛感轻微</string>
    <string name="longTime">长，痛感明显</string>
    <!-- 自发性疼痛 -->
    <string name="describe_symptom_spontaneity">自发性疼痛</string>
    <string name="ifTime">一般是什么时间会感觉到疼痛？</string>
    <string name="daytime">白天</string>
    <string name="night">夜间</string>
    <string name="allDayLong">全天</string>
    <string name="ifIntervalOrContinuity">是间接性的还是持续性的呢？</string>
    <string name="interval">间歇性</string>
    <string name="continuity">持续性</string>
    <string name="isFeel">是怎么样的疼痛感觉呢？</string>
    <string name="swellingPain">胀痛</string>
    <string name="jumpingPain">跳痛</string>
    <string name="PurePain">纯痛</string>
    <string name="ifAggravate">咬牙时是否会出现或加重疼痛？</string>
    <string name="ifLoose">是否出现牙齿松动？</string>
    <!-- 刷牙出血 -->
    <string name="hemorrhage">会经常出血吗？</string>
    <string name="yes_hemorrhage">是的，经常出血</string>
    <string name="no_hemorrhage">不，只是偶尔轻微出血</string>
    <string name="isStophemorrhage">漱口后是否会停止出血？</string>
    <string name="meet">会</string>
    <string name="incapable">不会</string>
    <string name="isIncapable">不会，涑口后仍有少量出血,过一会才能停止</string>
    <string name="isEat_hemorrhage">吃东西，比如啃苹果时是否会出血？</string>
    <string name="isSpontaneity_hemorrhage">平时是否会自发性渗血？</string>
    <string name="isFeel_ache">牙龈是否会感到肿胀疼痛？</string>
    <string name="ifLess">牙齿有没有松动？</string>
    <string name="isToothwash_time">上一次洗牙是多久以前了？</string>
    <string name="halfAyear">不到半年</string>
    <string name="twoYear">不到两年</string>
    <string name="twoYearOrBefore">两年甚至更久以前</string>
    <string name="never">从未洗过牙</string>
    <!-- 口腔有异味 -->
    <string name="peculiar">经常会有异味吗？</string>
    <string name="yes_peculiar">是的，经常有异味</string>
    <string name="no_peculiar">不，偶尔有异味</string>
    <string name="isHemorrhage">刷牙会经常出血吗？</string>
    <string name="iscause">能否排除肠胃问题等其他身体原因？</string>
    <string name="yes">能</string>
    <string name="noS">不确定</string>
    <!-- 牙齿颜色发黑 -->
    <string name="habit">是否长期有喝茶、吸烟、喝咖啡等习惯？</string>
    <string name="yes_habit">有</string>
    <string name="no_habit">没有</string>
    <string name="isToothwash">有没有定期洗牙？</string>
    <string name="isRecover">洗牙后是否可以恢复？</string>
    <!-- 结论 -->
    <string name="decayed_tooth">感谢您的耐心配合，您很可能患有龋病(虫牙)。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="pulpitis">感谢您的耐心配合，您很可能患有牙髓炎。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="pulpitis_unite">感谢您的耐心配合，您很可能患有牙周牙髓联合病变。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="apicitis">感谢您的耐心配合，您很可能患有根尖炎。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="maybe">感谢您的耐心配合，您很可能患有牙龈炎或牙周炎。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="periodontitis">感谢您的耐心配合，您很可能患有牙周炎。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="gingivitis">感谢您的耐心配合，您很可能患有牙龈炎。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="defect">感谢您的耐心配合，您很可能患有内源性染色或牙体缺损。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="ExtrinsicStaining">感谢您的耐心配合，您很可能患有外源性染色。为进一步确诊，推荐您根据提示，使用识图自诊进一步确定病症，并在推荐阅读中了解相关内容。</string>
    <string name="GeneralMap">识图自诊</string>
    <string name="reading">推荐阅读</string>
    <string name="hintUser">您的此次问诊已被记录并归入档案，您可以在数字病历中查询，或者开始新的问诊。</string>
    <string name="Number_of_cases">数字病例</string>
    <string name="newInquiry">新的问诊</string>

    <!-- 提示 -->
    <string name="spontaneity">自发性疼痛 \n 一般是指没有外界明显的刺激，自发产生的疼痛</string>
    <string name="not_available">暂无解释</string>



</resources>
