<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.fragment.Inquiry">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inquiry_issue_shape"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/inquiry_yes_shape"
                android:text="@string/symptom_toothache"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/inquiry_issue_shape"
                android:text="@string/describe_symptom"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/inquiry_yes_shape"
                android:text="@string/describe_symptom_eat"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/inquiry_issue_shape"
                android:text="@string/describe_symptom_eat_of"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inquiry_no_shape"
                    android:text="@string/describe_symptom_eat_cold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/inquiry_no_shape"
                    android:text="@string/describe_symptom_eat_hot"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/inquiry_issue_shape"
                android:text="@string/if_stopEat"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inquiry_no_shape"
                    android:text="@string/if_stopEat_yes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/inquiry_no_shape"
                    android:text="@string/if_stopEat_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/inquiry_conclusion_shape"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>