<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_E9ECED"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.HostitalMessageActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mTool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/mIv_getBack"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:src="@drawable/get_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hostitalMessage"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_18" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_margin="@dimen/dp_20"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/mIv_Hospital"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50" />

        </LinearLayout>

        <TextView
            android:id="@+id/mTv_Hospital"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/hostital"
            android:textSize="@dimen/dp_18" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@color/c_E0E0E0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/phoneNumber"
                android:textSize="@dimen/dp_18" />

            <TextView
                android:id="@+id/mTv_phone"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autoLink="phone"
                android:paddingLeft="@dimen/dp_5"
                android:text="@string/hostilePhone"
                android:textSize="@dimen/dp_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/c_E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Official_Accounts"
                android:textSize="@dimen/dp_18" />

            <TextView
                android:id="@+id/mTv_Official_Accounts"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="2"
                android:text="@string/Official_Accounts_code"
                android:textSize="@dimen/dp_16" />

            <Button
                android:id="@+id/mBt_copy"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/c_4C9FFF"
                android:textSize="@dimen/dp_14"
                android:text="@string/copy" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/c_E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/official_website"
                android:textSize="@dimen/dp_18" />

            <TextView
                android:id="@+id/mTv_official_website"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_weight="3"
                android:autoLink="web"
                android:ellipsize="end"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/baidu"
                android:textSize="@dimen/dp_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/c_E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cure_project"
                android:textSize="@dimen/dp_18" />

            <TextView
                android:id="@+id/mTv_cure_project"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autoLink="web"
                android:gravity="center"
                android:textSize="@dimen/dp_16" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>