<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PreselectionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mTool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/mIv_getBack"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:src="@drawable/get_back" />

        <TextView
            android:id="@+id/mTv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/preselection"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_18" />

    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/mView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/mTool"
        android:background="@color/c_CBCBCB" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10">

                <TextView
                    android:id="@+id/site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site"
                    android:textSize="@dimen/dp_18" />

                <TextView
                    android:id="@+id/mTV_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/site"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/location"
                    android:textSize="@dimen/dp_18" />

                <TextView
                    android:id="@+id/mTv_import_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mTV_location"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/import_location"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp_18" />

                <TextView
                    android:id="@+id/mTv_localizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/site"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/localizer"
                    android:textSize="@dimen/dp_18" />

                <ImageView
                    android:id="@+id/mIv_location"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_toLeftOf="@id/mTv_localizer"
                    android:src="@drawable/ic_launcher_background" />

            </RelativeLayout>

            <com.amap.api.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/preselection"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/ok_preselection"
                android:textColor="@color/black" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/mCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protocol"
                    android:textSize="@dimen/dp_12" />

            </LinearLayout>

            <Button
                android:id="@+id/mBtn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_80"
                android:background="@color/c_CFDEED"
                android:text="@string/submit"
                android:textColor="@color/blue" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>