<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RegulateActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mTool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/mIv_getBack"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:src="@drawable/get_back" />

        <TextView
            android:id="@+id/mTv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/regulate"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_18" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/c_CBCBCB" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/mTV_regulate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/TheBartenderOutpatient"
            android:textSize="@dimen/dp_20" />

        <TextView
            android:id="@+id/mTV_opinion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/opinion"
            android:textSize="@dimen/dp_20" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_3"
        android:background="@color/c_CBCBCB" />

    <TextView
        android:id="@+id/preconcentration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/noHospital"
        android:textSize="@dimen/dp_15" />

</LinearLayout>